// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#rdb mcp-server-connection generator > should add RDS CA bundle to Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/node:lts-jod

WORKDIR /app

RUN npm install @aws/aws-distro-opentelemetry-node-autoinstrumentation@0.7.0

COPY index.js /app

RUN apt-get update && apt-get install -y --no-install-recommends curl ca-certificates && \\
    rm -rf /var/lib/apt/lists/* && \\
    curl -fsSL "https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem" \\
    -o /usr/local/share/ca-certificates/rds-bundle.crt && \\
    update-ca-certificates

EXPOSE 8000

CMD [ "node", "--require", "@aws/aws-distro-opentelemetry-node-autoinstrumentation/register", "index.js" ]
"
`;

exports[`ts#rdb mcp-server-connection generator > should add rdb serve-local dependency to the mcp-server prefixed serve-local 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "metadata": {
    "components": [
      {
        "generator": "ts#mcp-server",
        "name": "my-mcp",
        "path": "src/my-mcp",
      },
    ],
  },
  "name": "my-service",
  "root": "packages/my-service",
  "targets": {
    "my-mcp-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb mcp-server-connection generator > should be idempotent for Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/node:lts-jod

WORKDIR /app

RUN npm install @aws/aws-distro-opentelemetry-node-autoinstrumentation@0.7.0

COPY index.js /app

RUN apt-get update && apt-get install -y --no-install-recommends curl ca-certificates && \\
    rm -rf /var/lib/apt/lists/* && \\
    curl -fsSL "https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem" \\
    -o /usr/local/share/ca-certificates/rds-bundle.crt && \\
    update-ca-certificates

EXPOSE 8000

CMD [ "node", "--require", "@aws/aws-distro-opentelemetry-node-autoinstrumentation/register", "index.js" ]
"
`;

exports[`ts#rdb mcp-server-connection generator > should be idempotent for server.ts 1`] = `
"import { getPrisma as getDb } from 'db';
import { McpServer } from '@modelcontextprotocol/sdk/server/mcp.js';

export const createServer = async () => {
  const db = await getDb();
  db.$on('error', console.error);
  const server = new McpServer({
    name: 'my-service',
    version: '1.0.0',
  });

  return server;
};
"
`;

exports[`ts#rdb mcp-server-connection generator > should fall back to mcp-server-serve-local when no component name 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "metadata": {
    "components": [
      {
        "generator": "ts#mcp-server",
        "name": "mcp-server",
        "path": "src/mcp-server",
      },
    ],
  },
  "name": "my-service",
  "root": "packages/my-service",
  "targets": {
    "mcp-server-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb mcp-server-connection generator > should inject db into server.ts 1`] = `
"import { getPrisma as getDb } from 'db';
import { McpServer } from '@modelcontextprotocol/sdk/server/mcp.js';

export const createServer = async () => {
  const db = await getDb();
  db.$on('error', console.error);
  const server = new McpServer({
    name: 'my-service',
    version: '1.0.0',
  });

  return server;
};
"
`;

exports[`ts#rdb mcp-server-connection generator > should support multiple rdb connections 1`] = `
"import { getPrisma as getMysqlDb } from 'mysql-db';
import { getPrisma as getPostgresDb } from 'postgres-db';
import { McpServer } from '@modelcontextprotocol/sdk/server/mcp.js';

export const createServer = async () => {
  const mysqlDb = await getMysqlDb();
  mysqlDb.$on('error', console.error);
  const postgresDb = await getPostgresDb();
  postgresDb.$on('error', console.error);
  const server = new McpServer({
    name: 'my-service',
    version: '1.0.0',
  });

  return server;
};
"
`;
